WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
9202
CSS3: border-radius not completely implemented, testcase hangs webkit
https://bugs.webkit.org/show_bug.cgi?id=9202
Summary
CSS3: border-radius not completely implemented, testcase hangs webkit
Joost de Valk (AlthA)
Reported
2006-06-01 00:51:50 PDT
the border-radius "subtypes" border-radius-topleft, border-radius-topright, border-radius-bottomleft and border-radius-bottomright are not implemented, as shown by the forthcoming testcase.
Attachments
Testcase
(3.58 KB, text/html)
2006-06-01 00:52 PDT
,
Joost de Valk (AlthA)
no flags
Details
new test case... hangs my webkit
(3.22 KB, text/html)
2006-08-01 13:05 PDT
,
Alexander Kellett
no flags
Details
sample of hang
(12.43 KB, text/plain)
2006-08-14 13:31 PDT
,
Alice Liu
no flags
Details
Patch
(139.54 KB, patch)
2006-12-26 08:18 PST
,
mitz
darin
: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Joost de Valk (AlthA)
Comment 1
2006-06-01 00:52:18 PDT
Created
attachment 8634
[details]
Testcase
Joost de Valk (AlthA)
Comment 2
2006-06-01 00:52:44 PDT
cc-ing Beth, as she fixed the other border-radius bugs.
Joost de Valk (AlthA)
Comment 3
2006-08-01 12:26:37 PDT
This testcase is plain wrong :). Should be -webkit-border-top-left-radius etc. Only one not working seems to be bottom-right, but i'm researching that...
Alexander Kellett
Comment 4
2006-08-01 13:05:08 PDT
Created
attachment 9798
[details]
new test case... hangs my webkit
Alexander Kellett
Comment 5
2006-08-01 23:38:03 PDT
making P1, this hangs webkit reproducibly
Alice Liu
Comment 6
2006-08-14 13:31:03 PDT
Created
attachment 10024
[details]
sample of hang this is the end of the main thread: 696 WebCore::GraphicsContext::drawArc(WebCore::IntRect const&, float, int, int)   696 CGContextStrokePath     696 CGContextDrawPath        696 ripc_DrawPath          696 ripr_Path            696 CGPathApply             696 ripr_path_stroke                696 path_dash_iterate                  696 cube_length                   696 cube_length
Alice Liu
Comment 7
2006-08-14 13:31:38 PDT
whoa! what happened there?
Alice Liu
Comment 8
2006-08-14 13:44:20 PDT
<
rdar://problem/4680169
>
David Kilzer (:ddkilzer)
Comment 9
2006-08-14 16:50:54 PDT
(In reply to
comment #7
)
> whoa! what happened there?
Looks like a regression from
Bug 9630
, or are you using an old WebKit build, Alice? The   entity is the same as a non-breaking space entity ( ). (See
comment #6
.)
mitz
Comment 10
2006-08-21 12:06:11 PDT
***
Bug 10479
has been marked as a duplicate of this bug. ***
mitz
Comment 11
2006-08-21 12:09:24 PDT
As far as I can tell, the hang is the only issue here (the original bug was invalid). As I mentioned in
bug 10479
, the problem is a consequence of division by zero in drawArc when it's asked to draw a zero-radius dashed arc. It ends up passing some huge value down to CG causing it to hand (I think someone said that it actually returns after 15 minutes).
mitz
Comment 12
2006-12-26 08:18:49 PST
Created
attachment 12031
[details]
Patch
Darin Adler
Comment 13
2006-12-27 22:08:27 PST
Comment on
attachment 12031
[details]
Patch r=me
Sam Weinig
Comment 14
2006-12-28 11:43:52 PST
Landed in
r18456
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug