LayoutTests:

Reviewed by Darin.

        Based on a test by Joost de Valk.

        - test and updated results for http://bugs.webkit.org/show_bug.cgi?id=9202
          CSS3: border-radius not completely implemented, testcase hangs webkit

        * fast/borders/borderRadiusAllStylesAllCorners-expected.checksum: Added.
        * fast/borders/borderRadiusAllStylesAllCorners-expected.png: Added.
        * fast/borders/borderRadiusAllStylesAllCorners-expected.txt: Added.
        * fast/borders/borderRadiusAllStylesAllCorners.html: Added.
        * fast/borders/borderRadiusArcs01-expected.checksum:
        * fast/borders/borderRadiusArcs01-expected.png:
        * fast/borders/borderRadiusGroove01-expected.checksum:
        * fast/borders/borderRadiusGroove01-expected.png:
        * fast/borders/borderRadiusGroove02-expected.checksum:
        * fast/borders/borderRadiusGroove02-expected.png:
        * fast/borders/borderRadiusInset01-expected.checksum:
        * fast/borders/borderRadiusInset01-expected.png:
        * fast/borders/borderRadiusInvalidColor-expected.checksum:
        * fast/borders/borderRadiusOutset01-expected.checksum:
        * fast/borders/borderRadiusOutset01-expected.png:
        * fast/borders/borderRadiusRidge01-expected.checksum:
        * fast/borders/borderRadiusRidge01-expected.png:

WebCore:

        Reviewed by Darin.

        - fix http://bugs.webkit.org/show_bug.cgi?id=9202
          CSS3: border-radius not completely implemented, testcase hangs webkit

        Test: fast/borders/borderRadiusAllStylesAllCorners.html

        * rendering/RenderObject.cpp:
        (WebCore::RenderObject::paintBorder): Changed to not draw "arcs" at straight
        corners and to paint half-corners only where the styles mismatch.
        Corrected the condition for matching styles: ridge, groove, inset and outset
        all mismatch in the upper right and lower left corners and match in the other
        two. The incorrect condition for a match was (almost) unnoticeable because of
        the painting of both half-corners on each side that had at least one mismatch.



Canonical link: https://commits.webkit.org/15500@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@18456 268f45cc-cd09-0410-ab3c-d52691b4dbfc